:bug: Accound for missing padding

--- a/@navikt/core/css/src/date.css
+++ b/@navikt/core/css/src/date.css
@@ -13,6 +13,12 @@
     &[data-outside="true"] {
       width: var(--__axc-date-button-size);
       height: var(--__axc-date-button-size);
+
+      /* Padding is ignored when element is empty */
+      &:empty {
+        width: calc(var(--__axc-date-button-size) + 2px);
+        height: calc(var(--__axc-date-button-size) + 2px);
+      }
     }
   }
 
